# stitching_cpp

./: CMakeLists.txt  README.md  image_stitching.cpp  image_stitching.h  main.cpp
